Refactors API and view logic; removes MongoDB dependencies
Replaces inline API logic with dedicated controllers to improve modularity and maintainability.

Removes MongoDB-specific model and manager files, transitioning to a more generic structure.

Updates routers and views to reflect the new architecture, including enhanced routes for user, product, and cart operations.

Simplifies view templates and introduces dynamic elements for better user experience.

Fixes inconsistencies in file naming conventions and updates references to match.

--- a/src/views/details.handlebars
+++ b/src/views/details.handlebars
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="/css/details.css">
+    <link rel="stylesheet" href="/css/Details.css">
 </head>
 
 <div id="detailsDivTitle">
@@ -11,8 +11,8 @@
             <img class="detailsUlLih6" src="{{product.image}}" alt="{{product._id}}">
         </div>
         <div class="detailsUlLiDiv">
-            <h3 class="detailsUlLih3">Code: </h3>
-            <h3 class="detailsUlLih3">{{product._id}}</h3>
+            <h3 class="detailsUlLih3">Id: </h3>
+            <h3 class="detailsUlLih3" id="productId">{{product._id}}</h3>
         </div>
         <div class="detailsUlLiDiv">
             <h3 class="detailsUlLih3">Title: </h3>
@@ -28,7 +28,7 @@
         </div>
         <div class="detailsUlLiDiv">
             <h3 class="detailsUlLih3">Stock: </h5>
-            <h3 class="detailsUlLih3">{{product.stock}}</h3>
+            <h3 class="detailsUlLih3" id="productStock">{{product.stock}}</h3>
         </div>
         <div class="detailsUlLiDiv">
             <h3 class="detailsUlLih3">Category: </h6>
@@ -47,7 +47,9 @@
                 <p class="detailsUlLiDivBottomQuantityP">Quantity: </p>
                 <input type="number" id="detailsUlLiDivBottomQuantityInput">
             </div>
-            <button class="btn btn-outline-success btnAddProductToCart">Add to Cart</button>
+            <button class="btn btn-outline-success" id="btnAddProductToCart">Add to Cart</button>
         </div>
     </section>
 </div>
+
+<script src="/scripts/details.js"></script>
