--- a/src/views/error.handlebars
+++ b/src/views/error.handlebars
@@ -1,9 +1,9 @@
 <head>
-    <link rel="stylesheet" href="/css/error.css">
+    <link rel="stylesheet" href="/css/Error.css">
 </head>
 <div id="divErrorMessage">
     <h1 id="errorMessage">{{error.message}}</h1>
 </div>
 <div id="divErrorImage"> 
-    <img src="" alt="errorImage" id="errorImage">
+    <img src="/assets/oops.png" alt="errorImage" id="errorImage">
 </div>
