--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="/css/register.css">
+    <link rel="stylesheet" href="/css/Register.css">
 </head>
 
 <div id="registerDivHead">
@@ -17,6 +17,7 @@
             <input type="password" class="form-control" id="inputPasswordLogin">
         </div>
         <div id="registerFormDivBtns">
+            <a class="btn btn-outline-success" type="button" id="btnGoogleLogin" value="GoogleLogin" href="/api/auth/google/redirect">Login with Google</a>
             <a class="btn btn-outline-success" type="button" id="btnGoBack" value="Home" href="/">Home</a>
             <a class="btn btn-outline-success" type="button" id="btnLogin" value="Login">Login</a>
         </div>
