--- a/src/views/product.handlebars
+++ b/src/views/product.handlebars
@@ -1,46 +1,49 @@
 <head>
-    <link rel="stylesheet" href="/css/newproduct.css">
+    <link rel="stylesheet" href="/css/NewProduct.css">
 </head>
 
 <div id="newProductDivTitle">
     <section id="newProductDivSectTop">
-        <h2 id="newProducth2Title">New Product</h2>
+        <h2 id="newProducth2Title">{{#if product}}Edit Product{{else}}New Product{{/if}}</h2>
     </section>
     <section id="newProductDivSectMiddle">
         <div class="newProductUlLiDiv">
+            {{#if product}}
+            <input type="hidden" id="productId" value="{{product._id}}">
+            {{/if}}
             <h3 class="newProductUlLih3">Image: </h3>
-            <input type="text" id="newProductUlLiImage">
+            <input type="text" id="newProductUlLiImage" value="{{#if product}}{{product.image}}{{/if}}">
         </div>
         <div class="newProductUlLiDiv">
             <h3 class="newProductUlLih3">Title: </h3>
-            <input type="text" id="newProductUlLihTitle">
+            <input type="text" id="newProductUlLihTitle" value="{{#if product}}{{product.title}}{{/if}}">
         </div>
         <div class="newProductUlLiDiv">
             <h3 class="newProductUlLih3">Price: </h3>
-            <input type="number" id="newProductUlLihPrice">
+            <input type="number" id="newProductUlLihPrice" value="{{#if product}}{{product.price}}{{/if}}">
         </div>
         <div class="newProductUlLiDiv">
             <h3 class="newProductUlLih3">Code: </h3>
-            <input type="text" id="newProductUlLihCode">
+            <input type="text" id="newProductUlLihCode" value="{{#if product}}{{product.code}}{{/if}}">
         </div>
         <div class="newProductUlLiDiv">
             <h3 class="newProductUlLih3">Stock: </h3>
-            <input type="number" id="newProductUlLihStock">
+            <input type="number" id="newProductUlLihStock" value="{{#if product}}{{product.stock}}{{/if}}">
         </div>
         <div class="newProductUlLiDiv">
             <h3 class="newProductUlLih3">Category: </h3>
-            <input type="text" id="newProductUlLihCategory">
+            <input type="text" id="newProductUlLihCategory" value="{{#if product}}{{product.category}}{{/if}}">
         </div>
         <div class="newProductUlLiDiv">
             <h3 class="newProductUlLih3">Status: </h3>
-            <input type="checkbox" id="newProductUlLihStatus">
+            <input type="checkbox" id="newProductUlLihStatus" {{#if product.status}}checked{{/if}}>
         </div>
         <div class="newProductUlLiDiv">
             <h3 class="newProductUlLih3">Description: </h3>
-            <input type="text" id="newProductUlLihDescription">
+            <input type="text" id="newProductUlLihDescription" value="{{#if product}}{{product.description}}{{/if}}">
         </div>
         <div class="newProductUlLiDivBottom">
-            <button class="btn btn-outline-success" id="btnCreateProduct">Create Product</button>
+            <button class="btn btn-outline-success" id="btnCreateProduct">{{#if product}}Update Porduct{{else}}Create Product{{/if}}</button>
         </div>
     </section>
 </div>
