--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="/css/register.css">
+    <link rel="stylesheet" href="/css/Register.css">
 </head>
 
 <div id="registerDivHead">
@@ -29,12 +29,11 @@
             <input type="password" class="form-control" id="inputPasswordRegister">
         </div>
         <div id="registerFormDivBtns">
+            <a class="btn btn-outline-success" type="button" id="btnGoogleRegister" value="GoogleRegister" href="/api/auth/google/redirect">Sign up with Google</a>
             <a class="btn btn-outline-success" type="button" id="btnGoBack" value="Home" href="/">Home</a>
             <a class="btn btn-outline-success" type="button" id="btnRegister" value="Register"> Register</a>
         </div>
     </form>
 </div>
-
-
 
 <script src="/scripts/register.js"></script>
