--- a/src/views/update-user.handlebars
+++ b/src/views/update-user.handlebars
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="/css/register.css">
+    <link rel="stylesheet" href="/css/Register.css">
 </head>
 
 <div id="registerDivHead">
