--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/Index.css">
 </head>
 
 <div id="indexDivHead">
